2015-12-06 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/asciiglyphs.tcl: Package HexGlyphs renamed as AsciiGlyphs

2015-12-05 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/try.tcl: new command ::rivet::try wraps core
    same command to trap ::rivet::abort_code and ::rivet::exit interruptions
    * src/mod_rivet/rivetCore.c: removed semicolons in macro CHECK_REQUEST_REC
    calls
    * rivet/rivet-tcl/catch.tcl: using [uplevel] to control Tcl core [catch] 
    command (as it's been customary with Tcl ever since)

2015-12-03 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/internals.xml: explaining the MPM bridge jump table
    * doc/rivet.css: changing colors adopting 2.3 style temporarily
    * doc/images: new images with new colors
    * doc/xml/intro.xml,install.xml: removing reference no longer
    valid for version 3.0
    * packages/hexglyphs/hexglyphs.tcl: new glyphs for more punctuation
    characters

2015-11-27 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: Major version number increased to 3.0.0

2015-11-25 Massimo Manghi <mxmanghi@apache.org>
    * src/rivet.h: defined RIVET_CMD_EXPORT as wrapper to Tcl_Export
    * tests/bailout.test: redirect.test renamed as bailout.test. It's meant
    to gather all the tests concerning exceptions like abort_page and ::rivet::exit
    * src/librivet/rivet[Crypt|WWW|List].c: command export mechanism changed
    as we are now explicitly exporting commands
    * rivet/rivet-tcl/catch.tcl: new (non-exported) command ::rivet::catch
    * rivet/init.tcl[.in]: command export mechanics changed
    * src/mod_rivet/rivetCore.c: command export made explicit through RIVET_CMD_EXPORT.
    Abort page command now handling also [::rivet::abort_page -exiting] test

2015-10-27 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl.in: actually was this file that had to be changed

2015-10-22 Massimo Manghi <mxmanghi@apache.org>