@@ -1,3 +1,7 @@
+2015-12-08 Massimo Manghi <mxmanghi@apache.org>
+    * doc/xml/commands.xml,asciiglyphs.tcl: adding documentation for ::rivet::try
+    and AsciiGlyphs
+
 2015-12-06 Massimo Manghi <mxmanghi@apache.org>
     * rivet/packages/asciiglyphs.tcl: Package HexGlyphs renamed as AsciiGlyphs
 
